// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.
// Code generated by gorm.io/gen. DO NOT EDIT.

package model

import (
	"time"
)

const TableNameOrderItemCreateDomain = "order_item_create_domain"

// OrderItemCreateDomain mapped from table <order_item_create_domain>
type OrderItemCreateDomain struct {
	CreatedDate        *time.Time `gorm:"column:created_date;type:timestamp with time zone;default:now()" json:"created_date"`
	UpdatedDate        *time.Time `gorm:"column:updated_date;type:timestamp with time zone" json:"updated_date"`
	CreatedBy          *string    `gorm:"column:created_by;type:text;default:CURRENT_USER" json:"created_by"`
	UpdatedBy          *string    `gorm:"column:updated_by;type:text" json:"updated_by"`
	ID                 string     `gorm:"column:id;type:uuid;primaryKey;default:gen_random_uuid()" json:"id"`
	OrderID            string     `gorm:"column:order_id;type:uuid;not null" json:"order_id"`
	StatusID           string     `gorm:"column:status_id;type:uuid;not null;default:tc_id_from_name('order_item_status'::text, 'pending'::text)" json:"status_id"`
	ParentOrderItemID  *string    `gorm:"column:parent_order_item_id;type:uuid" json:"parent_order_item_id"`
	Name               string     `gorm:"column:name;type:fqdn;not null" json:"name"`
	RegistrationPeriod int32      `gorm:"column:registration_period;type:integer;not null;default:1" json:"registration_period"`
	AccreditationTldID string     `gorm:"column:accreditation_tld_id;type:uuid;not null" json:"accreditation_tld_id"`
	AutoRenew          bool       `gorm:"column:auto_renew;type:boolean;not null;default:true" json:"auto_renew"`
	Locks              *string    `gorm:"column:locks;type:jsonb" json:"locks"`
	LaunchData         *string    `gorm:"column:launch_data;type:jsonb" json:"launch_data"`
	AuthInfo           *string    `gorm:"column:auth_info;type:text" json:"auth_info"`
	SecdnsMaxSigLife   *int32     `gorm:"column:secdns_max_sig_life;type:integer" json:"secdns_max_sig_life"`
	Tags               *string    `gorm:"column:tags;type:text[]" json:"tags"`
	Metadata           *string    `gorm:"column:metadata;type:jsonb;default:{}" json:"metadata"`
}

// TableName OrderItemCreateDomain's table name
func (*OrderItemCreateDomain) TableName() string {
	return TableNameOrderItemCreateDomain
}
