erDiagram
    product {
        uuid id PK
        text name 
    }

    order_type {
        uuid id PK
        uuid product_id FK
        text name 
    }

    order_status {
        uuid id PK
        text name 
        text descr 
        boolean is_final 
        boolean is_success 
    }

    order_item_status {
        uuid id PK
        text name 
        text descr 
        boolean is_final 
        boolean is_success 
    }

    order_status_path {
        uuid id PK
        text name 
        text descr 
    }

    order_status_transition {
        uuid id PK
        uuid path_id FK
        uuid from_id FK
        uuid to_id FK
    }

    order {
        timestamp_with_time_zone created_date 
        timestamp_with_time_zone updated_date 
        text created_by 
        text updated_by 
        uuid id PK
        uuid tenant_customer_id FK
        uuid type_id FK
        uuid customer_user_id FK
        uuid status_id FK
        uuid path_id FK
    }

    order_item {
        timestamp_with_time_zone created_date 
        timestamp_with_time_zone updated_date 
        text created_by 
        text updated_by 
        uuid id PK
        uuid order_id FK
        uuid status_id FK
        uuid parent_order_item_id FK
    }

    order_contact {
        timestamp_with_time_zone created_date 
        timestamp_with_time_zone updated_date 
        text created_by 
        text updated_by 
        timestamp_with_time_zone deleted_date 
        text deleted_by 
        uuid id PK
        uuid type_id 
        text title 
        text org_reg 
        text org_vat 
        text org_duns 
        uuid tenant_customer_id 
        text email 
        text phone 
        text fax 
        text country 
        text language          
        ARRAY tags 
        ARRAY documentation 
        uuid order_id FK
    }

    order_contact_postal {
        timestamp_with_time_zone created_date 
        timestamp_with_time_zone updated_date 
        text created_by 
        text updated_by 
        timestamp_with_time_zone deleted_date 
        text deleted_by 
        uuid id PK
        uuid contact_id FK
        boolean is_international 
        text first_name 
        text last_name 
        text org_name 
        text address1 
        text address2 
        text address3 
        text city 
        text postal_code 
        text state 
    }

    order_item_plan_status {
        timestamp_with_time_zone created_date 
        timestamp_with_time_zone updated_date 
        text created_by 
        text updated_by 
        uuid id PK
        text name 
        text descr 
        boolean is_success 
        boolean is_final 
    }

    order_item_object {
        timestamp_with_time_zone created_date 
        timestamp_with_time_zone updated_date 
        text created_by 
        text updated_by 
        uuid id PK
        text name 
        text descr 
    }

    order_item_strategy {
        uuid id PK
        uuid order_type_id FK
        uuid provider_instance_id FK
        uuid object_id FK
        integer provision_order 
    }

    order_item_plan {
        uuid id PK
        uuid order_item_id 
        uuid parent_id FK
        uuid status_id FK
        uuid order_item_object_id FK
        uuid reference_id 
        text result_message 
        jsonb result_data 
    }

    order_type }o--|| product : "product_id"
    order }o--|| order_type : "type_id"
    order_item_strategy }o--|| order_type : "order_type_id"
    order_status_transition }o--|| order_status : "from_id"
    order_status_transition }o--|| order_status : "to_id"
    order }o--|| order_status : "status_id"
    order_item }o--|| order_item_status : "status_id"
    order_item_create_domain }o--|| order_item_status : "status_id"
    order_item_renew_domain }o--|| order_item_status : "status_id"
    order_item_create_contact }o--|| order_item_status : "status_id"
    order_status_transition }o--|| order_status_path : "path_id"
    order }o--|| order_status_path : "path_id"
    order }o--|| tenant_customer : "tenant_customer_id"
    order }o--|| customer_user : "customer_user_id"
    order_item }o--|| order : "order_id"
    order_contact }o--|| order : "order_id"
    order_item_create_domain }o--|| order : "order_id"
    order_item_renew_domain }o--|| order : "order_id"
    order_item_create_contact }o--|| order : "order_id"
    order_item }o--|| order_item : "parent_order_item_id"
    order_contact_postal }o--|| order_contact : "contact_id"
    create_domain_contact }o--|| order_contact : "order_contact_id"
    order_item_plan }o--|| order_item_plan_status : "status_id"
    order_item_strategy }o--|| order_item_object : "object_id"
    order_item_plan }o--|| order_item_object : "order_item_object_id"
    order_item_strategy }o--|| provider_instance : "provider_instance_id"
    order_item_plan }o--|| order_item_plan : "parent_id"
